chore: clean up code structure